argocd/media-server/unpackerr/manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unpackerr
  labels:
    istio-injection: disabled
