argocd/media-server/unpackerr/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unpackerr
  labels:
    app: unpackerr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: unpackerr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: unpackerr
    spec:
      containers:
        - env:
            - name: PGID
              value: "3000"
            - name: PUID
              value: "3000"
            - name: TZ
              value: America/Chicago
            - name: UN_DEBUG
              value: "false"
            - name: UN_SONARR_0_URL
              value: http://sonarr.sonarr.svc.cluster.local:8989
            - name: UN_SONARR_PATHS_0
              value: /data/media/torrents/completed/tv
            - name: UN_RADARR_0_URL
              value: http://radarr.radarr.svc.cluster.local:7878
            - name: UN_RADARR_PATHS_0
              value: /data/media/torrents/completed/movies
            - name: UN_LOG_FILE
              value: /data/logs/log.txt
            - name: UN_FOLDER_0_MOVE_BACK
              value: "true"
          image: harbor.yanello.net/docker/golift/unpackerr:v0.16.1@sha256:244fc45cb207308f60e8f52dd703c2b3463385752de0f9517c58ff9d331ed15e
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 50Mi
          name: unpackerr
          volumeMounts:
            - mountPath: /data/media
              name: media
      volumes:
        - name: config
          configMap:
            name: config
        - name: logs
          emptyDir: {}
        - name: media
          hostPath:
            type: Directory
            path: /data/media
