argocd/media-server/unpackerr/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unpackerr
spec:
  endpointSelector:
    matchLabels:
      app: unpackerr
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: sonarr
            app: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: radarr
            app: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
